[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Facsimidoxy Leaflet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Facsimidoxy Leaflet.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Players/Player1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Shuttle/1PNavTerminal.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 5.01818

[sub_resource type="CircleShape2D" id=2]
radius = 48.0937

[sub_resource type="CircleShape2D" id=3]
radius = 72.3671

[node name="Node2D" type="KinematicBody2D"]
position = Vector2( -980, -181 )
script = ExtResource( 2 )

[node name="ShipBase" type="KinematicBody2D" parent="."]

[node name="Player" parent="ShipBase" instance=ExtResource( 3 )]
position = Vector2( 1175, 281 )
scale = Vector2( 1.5, 1.5 )
z_index = 1

[node name="Sail" type="Area2D" parent="ShipBase"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipBase/Sail"]
position = Vector2( 956, 152 )
scale = Vector2( 11.56, 10.64 )
shape = SubResource( 1 )

[node name="Gunner" type="Area2D" parent="ShipBase"]
position = Vector2( -259, -88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipBase/Gunner"]
position = Vector2( 1506, 381 )
scale = Vector2( 11.56, 10.64 )
shape = SubResource( 1 )

[node name="Area2D" type="KinematicBody2D" parent="ShipBase"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipBase/Area2D"]
position = Vector2( 1077, 282 )
shape = SubResource( 2 )

[node name="Nav" parent="ShipBase" instance=ExtResource( 4 )]
position = Vector2( 957, 166 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipBase/Nav"]
position = Vector2( 9, -19 )
shape = SubResource( 3 )
disabled = true

[node name="Sprite" type="Sprite" parent="ShipBase"]
position = Vector2( 702, 302 )
texture = ExtResource( 1 )
vframes = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShipBase"]
polygon = PoolVector2Array( 50, 297, 52, 268, 68, 230, 122, 188, 197, 150, 333, 107, 518, 81, 585, 77, 771, 76, 836, 80, 945, 94, 957, 96, 1076, 120, 1186, 160, 1239, 186, 1288, 229, 1303, 266, 1304, 299, 1296, 324, 1261, 368, 1214, 399, 1127, 438, 959, 479, 925, 478, 897, 441, 884, 393, 881, 374, 701, 371, 588, 366, 477, 360, 365, 356, 253, 351, 139, 347, 73, 341, 52, 302, 73, 297, 84, 322, 898, 355, 902, 383, 934, 381, 953, 413, 1003, 410, 1013, 443, 1118, 416, 1205, 379, 1244, 355, 1232, 321, 1256, 289, 1250, 267, 1231, 248, 1251, 226, 1226, 205, 1175, 178, 1064, 141, 1005, 122, 995, 155, 956, 154, 949, 185, 909, 183, 903, 202, 897, 239, 896, 339, 896, 352, 875, 352, 765, 342, 100, 294 )

[node name="vines" type="Sprite" parent="ShipBase"]
position = Vector2( 1086, 293 )
texture = ExtResource( 1 )
hframes = 11
vframes = 22
frame = 74

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="ShipBase/Sail" to="." method="_on_Sail_area_entered"]
[connection signal="area_exited" from="ShipBase/Sail" to="." method="_on_Sail_area_exited"]
